<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_ten"
        android:drawableLeft="@drawable/drawer_create_new_icon"
        android:drawablePadding="5dp"
        android:text="@string/title_create_request"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_ten"
        android:drawableLeft="@drawable/drawer_visitors_list_icon"
        android:drawablePadding="5dp"
        android:text="@string/title_visitors_list"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_ten"
        android:drawableLeft="@drawable/drawer_create_new_icon"
        android:drawablePadding="5dp"
        android:text="@string/title_pending_request"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/drawer_change_password_icon"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:text="@string/title_change_password"
        android:textStyle="bold"
        android:layout_margin="@dimen/padding_ten"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/drawer_logout_icon"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:text="@string/title_logout"
        android:textStyle="bold"
        android:layout_margin="@dimen/padding_ten"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/drawer_help_icon"
        android:drawablePadding="5dp"
        android:layout_height="wrap_content"
        android:text="@string/title_help"
        android:textStyle="bold"
        android:layout_margin="@dimen/padding_ten"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</LinearLayout>