<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.project.UnityLiving.fragment.ChangePasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|top"
        android:background="@drawable/transparent_new">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_five">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_ten"
                    android:textColorHint="@color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/ic_lock_white_18dp"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_ten"
                    android:textColorHint="@color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/repeat_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:drawableLeft="@drawable/ic_lock_white_18dp"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/repeat_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_five"
                    android:background="@color/colorPrimaryDark"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/change_password"
                    android:textColor="@color/white" />

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>
</FrameLayout>
