<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.project.UnityLiving.fragment.CreateRequestFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|top"
        android:background="@drawable/transparent_new">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_five">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_five"
                    android:textColorHint="@color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_five"
                    android:textColorHint="@color/white">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/location"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/password"
                        android:backgroundTint="@color/white"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_five"
                    android:background="@color/colorPrimaryDark"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/signIn"
                    android:textColor="@color/white" />

            </LinearLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="240dp"
            android:tint="@color/white"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="131dp"
            android:layout_weight="0.04"
            android:src="@drawable/logo" />
    </RelativeLayout>
</FrameLayout>
