<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.project.UnityLiving.fragment.CreateRequestFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent_new">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/user_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_five">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/user"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/phone"
                        android:drawablePadding="@dimen/padding_five"
                        android:hint="@string/phone"
                        android:inputType="textPersonName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white">

                    <EditText
                        android:id="@+id/appartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:drawableLeft="@drawable/location"
                        android:drawablePadding="@dimen/padding_five"
                        android:editable="false"
                        android:hint="@string/apartment"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/form"
                android:padding="@dimen/padding_five">

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"

                    android:layout_centerVertical="true"

                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/photo" />

                <ImageButton
                    android:id="@+id/done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"

                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/close" />

                <ImageButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/done"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/tick" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
